test/week7/valid/test1.c
int x;
char c;
x = 10;
c = x;
if (x > 0) {
    x = x + c;
}
