test/week7/invalid/test3_unclosed_block.c
int a;
int b = 3;
a = 0;
if (b > 0) {
    a = a + 1;
    while (a < 5) {
        a = a + 1;
        if (a == 3) {
            b = b - 1;
        }

